# rust_open_gl

./: .gitignore  Cargo.toml  README.md
rsc/shader/: shader.fs  shader.vs
src/: _main.rs  main.rs  shader.rs  vertex.rs
