[package]
name = "rust_opengl"
version = "0.1.0"
authors = ["zawakichi <zawakichi21@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.2"
gl = "0.14.0"
cgmath = "0.17.0"
c_str_macro = "1.0.2"